# herd-survey-dashboard

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  qa-probe-report.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml
apps/mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/mcp/herd_mcp/: __init__.py  data.py  server.py  tools.py
apps/web/: biome.json  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/.next 2/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/app/: fonts.ts  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: annotations.test.ts  annotations.ts  duckdb.ts  format.ts  mobile.ts  (+6 more)
docs/: deployment.md
docs/qa/: qa-report-2026-06-01.md
scripts/: build_data.py  export_dim_institution_json.py  requirements.txt  verify_data.py
scripts/aggregations/: 01_total_rd.py  02_source_split.py  03_agency_split.py  04_federal_funds.py  05_pi_metrics.py  06_pi_distribution.py  07_field_mix.py  08_subject_tag.py  09_concentration.py  10_state_context.py  11_peers.py  12_patents.py  13_national_overview.py  14_national_agency_trend.py  15_national_concentration.py  _lib.py  run_all.sh
scripts/qa/: _probe_compare.js  _probe_home_search.js  _probe_minimal.js  _probe_profiles.js  axe_audit.js  check_links.js  facts.json  lighthouse.sh  probe_pages.js  run_all.sh  verify_facts.py
(+123 files in other folders)
