[project]
name = "herd-survey-mcp"
version = "0.1.0"
description = "MCP server exposing Herd Survey federal R&D data to claude.ai."
authors = [{ name = "Usama Afzal", email = "usama.afzal@nyu.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.2.0",
    "duckdb>=1.1.0",
    "pydantic>=2.5.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.setuptools]
packages = ["herd_mcp"]
